--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -17,21 +16,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="75dp"
             android:text="ברוך הבא"
             android:textSize="30dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#000099"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="לאפליקציית המכרזים"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:textColor="#000099"/>
 
         <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/username"
-            android:layout_width="200dp"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:hint="הזן את שם המשתמש שלך"
             android:singleLine="true" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="200dp"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:hint="הזן את הסיסמא שברשותך"
             android:inputType="numberPassword"
@@ -42,7 +50,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="היכנס" />
+            android:text="היכנס"
+            android:background="@drawable/rounded3"
+            android:textColor="#ffffff"/>
 
         <TextView
             android:id="@+id/register_text"
