--- a/app/src/main/res/layout/activity_my_tenders.xml
+++ b/app/src/main/res/layout/activity_my_tenders.xml
@@ -27,32 +27,45 @@
 
     </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="35dp"
+                android:text="הצעות שהגשתי"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"/>
+            <TextView
+                android:id="@+id/counter_tender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="35dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="288dp"
+                />
+
+        </RelativeLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:textStyle="bold"
-            android:textColor="@android:color/holo_blue_light"
-            android:textSize="35dp"
-            android:text="המכרזים שלי"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/counter_tender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100"
-            android:textSize="35dp"
-            android:layout_alignParentRight="true"
 
-            />
 
         <LinearLayout
+            android:layout_marginTop="10dp"
+            android:id="@+id/coteretwin"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dhifut_check"
+            android:background="@drawable/round"
+            >
 
 
             <TextView
@@ -62,7 +75,7 @@
                 android:text="מס''ד"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="85dp"
@@ -70,7 +83,7 @@
                 android:text="שם חברה"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="95dp"
@@ -78,20 +91,19 @@
                 android:text="שם פרוייקט"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="זמן שנותר"
+                android:text="סטטוס"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
-
-
+                android:textColor="@color/colorPrimaryDark"/>
         </LinearLayout>
 
         <ExpandableListView
+            android:layout_marginTop="10dp"
             android:id="@+id/listTenders"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ExpandableListView>
