--- a/app/src/main/res/layout/activity_tyotot.xml
+++ b/app/src/main/res/layout/activity_tyotot.xml
@@ -9,7 +9,6 @@
     tools:openDrawer="start">
 
 
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -29,31 +28,41 @@
                 android:background="?attr/colorPrimary" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content">
             <TextView
                 android:textStyle="bold"
                 android:textColor="@android:color/holo_blue_light"
                 android:textSize="35dp"
                 android:text="הטיוטות שלי"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp" />
             <TextView
                 android:id="@+id/counter_tender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="35dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="270dp"/>
+        </RelativeLayout>
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                />
             <LinearLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/coteretwin"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dhifut_check"
+                android:background="@drawable/round"
+                >
 
 
                 <TextView
@@ -63,7 +72,7 @@
                     android:text="מס''ד"
                     android:textSize="15dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:layout_width="85dp"
@@ -71,7 +80,7 @@
                     android:text="שם חברה"
                     android:textSize="15dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:layout_width="95dp"
@@ -79,7 +88,7 @@
                     android:text="שם פרוייקט"
                     android:textSize="15dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:layout_width="100dp"
@@ -87,12 +96,11 @@
                     android:text="סטטוס"
                     android:textSize="15dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
-
-
+                    android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
 
             <ExpandableListView
+                android:layout_marginTop="10dp"
                 android:id="@+id/listTyotot"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></ExpandableListView>
@@ -109,5 +117,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_tenders"
         app:menu="@menu/activity_tenders_drawer" />
+
 
 </android.support.v4.widget.DrawerLayout>
