--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    android:background="@drawable/wallpaper"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -31,31 +30,37 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorPrimaryDark"
             android:id="@+id/welcome"
             android:text="פרופיל ספק"
             android:textSize="30dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/round"
+            android:gravity="center"/>
 
         <LinearLayout
             android:layout_marginStart="25dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textColor="#000099"
+                android:textSize="18dp"
                 android:text="שם פרטי: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/editFirstName"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true" />
 
@@ -63,21 +68,24 @@
 
         <LinearLayout
             android:layout_marginStart="25dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textColor="#000099"
+                android:textSize="18dp"
                 android:text="שם משפחה: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/editLastName"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true" />
 
@@ -85,14 +93,15 @@
 
         <LinearLayout
             android:layout_marginStart="25dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textColor="#000099"
+                android:textSize="18dp"
                 android:text="טלפון: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -100,7 +109,9 @@
             <EditText
                 android:id="@+id/editPhone"
                 android:inputType="phone"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true" />
 
@@ -108,14 +119,15 @@
 
         <LinearLayout
             android:layout_marginStart="25dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textColor="#000099"
+                android:textSize="18dp"
                 android:text="מייל: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -123,7 +135,9 @@
             <EditText
                 android:id="@+id/editEmail"
                 android:inputType="textEmailAddress"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true" />
 
@@ -133,7 +147,9 @@
             android:id="@+id/enter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="45dp"
+            android:background="@drawable/rounded3"
+            android:textColor="#ffffff"
             android:text="שמור פרטים" />
 
 
