--- a/app/src/main/res/layout/activity_mifrat.xml
+++ b/app/src/main/res/layout/activity_mifrat.xml
@@ -183,6 +183,11 @@
                 android:singleLine="true"
                 android:background="@null"
                 android:textColor="#000000"/>
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:src="@drawable/shekel"
+                android:layout_gravity="bottom"/>
 
         </LinearLayout>
 
