--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -32,50 +32,66 @@
 
 
         <TextView
-            android:layout_marginTop="15dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:textSize="25dp"
             android:text="תמיכה"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round"
+            android:gravity="center"/>
 
         <TextView
+            android:layout_marginTop="8dp"
+            android:textColor="#66ccff"
             android:gravity="center"
-            android:textSize="15dp"
-            android:text="לקוח יקר, אנחנו כאן בשבילך.\n רשום את פנייתך ונענה עליה בהקדם."
+            android:textSize="18dp"
+            android:text="לקוח יקר, אנחנו כאן בשבילך.\n רשום את פנייתך ונחזור אלייך בהקדם."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="תאריך יומי:"
+                android:textSize="17dp"
+                android:textColor="#000099"
+                android:text="תאריך נוכחי:"
+                android:focusable="false"
+                android:enabled="false"
+                android:singleLine="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/editDate"
                 android:layout_width="150dp"
+                android:textColor="#000000"
+                android:background="@null"
+                android:focusable="false"
+                android:enabled="false"
+                android:singleLine="false"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
+                android:layout_marginLeft="10dp"
+                 />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textSize="17dp"
+                android:textColor="#000099"
                 android:text="שעה נוכחית:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -83,20 +99,30 @@
             <EditText
                 android:id="@+id/editHour"
                 android:layout_width="150dp"
+                android:textColor="#000000"
+                android:background="@null"
+                android:focusable="false"
+                android:enabled="false"
+                android:singleLine="false"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
+                android:layout_marginLeft="10dp"
+
+                 />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/round"
+            android:gravity="center">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textSize="17dp"
+                android:textColor="#000099"
                 android:text="רמת דחיפות: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -106,6 +132,7 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text="גבוהה"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -113,6 +140,7 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text=" / "
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -120,6 +148,7 @@
                 android:id="@+id/medium_dahof"
                 android:textStyle="bold"
                 android:textSize="15dp"
+                android:textColor="#000000"
                 android:text="בינונית"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -127,6 +156,7 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text=" / "
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -135,6 +165,7 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text="נמוכה"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -142,14 +173,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textSize="17dp"
+                android:textColor="#000099"
                 android:text="נושא הפנייה: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -164,14 +196,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="15dp"
+                android:textSize="17dp"
+                android:textColor="#000099"
                 android:text="תיאור הבעיה: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -179,14 +212,14 @@
             <EditText
                 android:id="@+id/pirot"
                 android:layout_width="200dp"
-                android:layout_height="100dp" />
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
 
         <LinearLayout
             android:gravity="center"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -195,7 +228,9 @@
                 android:id="@+id/send"
                 android:text="שלח פנייה"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded3"
+                android:textColor="#ffffff"/>
 
 
         </LinearLayout>
@@ -211,23 +246,29 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_marginTop="15dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:textSize="25dp"
             android:text="תמיכה"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round"
+            android:gravity="center"/>
 
         <TextView
             android:gravity="center"
-            android:textSize="15dp"
+            android:textSize="18dp"
+            android:layout_marginTop="15dp"
+            android:textColor="#66ccff"
             android:text="לקוח יקר, קיבלנו את פנייתך\nנציגינו יחזרו אליך בהקדם."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <ImageView
             android:layout_marginTop="25dp"
-            android:src="@drawable/smile"
+            android:src="@drawable/done"
+            android:background="@drawable/done"
             android:layout_width="125dp"
             android:layout_height="125dp" />
 
@@ -236,7 +277,9 @@
             android:text="חזור"
             android:layout_marginTop="55dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded3"
+            android:textColor="#ffffff"/>
 
     </LinearLayout>
 
