--- a/app/src/main/res/layout/fragment_details_tab.xml
+++ b/app/src/main/res/layout/fragment_details_tab.xml
@@ -36,7 +36,6 @@
                     android:id="@+id/numtender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="531"
                     android:textSize="30dp"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="75dp"
@@ -77,13 +76,14 @@
                 <EditText
                     android:focusable="false"
                     android:enabled="false"
-                    android:id="@+id/editName"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
                     android:singleLine="false"
                     android:background="@null"
+                    android:textColor="#000000"
+                    android:layout_width="150dp"
+                    android:id="@+id/editName"
+                    android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:textColor="#000000"/>
+                    />
 
             </LinearLayout>
 
