--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -1,104 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#ffffcc">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/contact_q"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:text="איש קשר : "
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"/>
 
-        <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="איש קשר : "
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:text="name"
-                android:id="@+id/name"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="נייד : "
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:text="phone"
-                android:id="@+id/phone"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
+        <TextView
+            android:text="name"
+            android:id="@+id/name"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="80dp"/>
 
 
+        <TextView
+            android:text="נייד : "
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="200dp"/>
 
-    </LinearLayout>
+        <TextView
+            android:text="phone"
+            android:id="@+id/phone"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="245dp"/>
 
+
+    </RelativeLayout>
     <LinearLayout
-        android:gravity="center"
+        android:id="@+id/l"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="אמייל : "
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:text="email"
-                android:id="@+id/email"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:text="לעוד פרטים"
-                android:id="@+id/details"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <ImageButton
-                android:src="@android:drawable/ic_menu_delete"
-                android:id="@+id/delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
+        android:layout_height="10dp"
+        android:layout_below="@+id/contact_q"
+        android:background="#ffffcc">
     </LinearLayout>
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/contact_b"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/l">
+
+        <TextView
+            android:text="אמייל : "
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"/>
+
+        <TextView
+            android:text="bennjaminfj@gmail.com"
+            android:id="@+id/email"
+            android:textStyle="bold"
+            android:textSize="15dp"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp"/>
+
+
+        <Button
+            android:text="לעוד פרטים"
+            android:id="@+id/details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded2"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"/>
+
+        <ImageButton
+            android:src="@drawable/delete_tyota"
+            android:background="@drawable/delete_tyota"
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="96dp"
+            />
+
+
+
+    </RelativeLayout>
+
+</RelativeLayout>
