--- a/app/src/main/res/layout/nav_header_tenders.xml
+++ b/app/src/main/res/layout/nav_header_tenders.xml
@@ -16,19 +16,25 @@
         android:id="@+id/image_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/nav_header_desc"
         app:srcCompat="@mipmap/ic_launcher_round" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ברוך שובך"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/b"/>
 
     <TextView
         android:id="@+id/name_user"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_above="@+id/image_user"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/b"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
