--- a/app/src/main/res/layout/fragment_market_tab.xml
+++ b/app/src/main/res/layout/fragment_market_tab.xml
@@ -94,6 +94,15 @@
              android:textSize="20dp"
              android:textStyle="bold"
              android:textColor="#000099" />
+         <TextView
+             android:layout_gravity="center"
+             android:id="@+id/status"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text=""
+             android:textSize="20dp"
+             android:textStyle="bold"
+             android:textColor="#000099" />
 
          <LinearLayout
              android:layout_width="match_parent"
