--- a/app/src/main/res/layout/fragment_public_tenders.xml
+++ b/app/src/main/res/layout/fragment_public_tenders.xml
@@ -30,6 +30,22 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="282dp"
             />
+        <LinearLayout
+            android:id="@+id/searchpublic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/counter_tender">
+
+            <SearchView
+                android:focusableInTouchMode="true"
+                android:id="@+id/bynamepublic"
+                android:layout_width="180dp"
+                android:layout_height="45dp"
+                android:layout_alignParentRight="true"/>
+
+
+
+        </LinearLayout>
 
 
         <LinearLayout
@@ -38,7 +54,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/counter_tender"
+            android:layout_below="@+id/searchpublic"
             android:background="@drawable/round">
 
             <TextView
