--- a/app/src/main/res/layout/fragment_list_tabs2.xml
+++ b/app/src/main/res/layout/fragment_list_tabs2.xml
@@ -17,25 +17,27 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="#222b92"
-                android:textSize="30dp"
-                android:textStyle="bold" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@drawable/round"
+                android:layout_marginBottom="5dp">
 
 
                 <TextView
                     android:layout_width="55dp"
                     android:layout_height="wrap_content"
-                    android:text="חברה"
+                    android:text="שם חברה"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    tools:textColor="#222b92" />
+                <TextView
+                    android:layout_width="55dp"
+                    android:layout_height="wrap_content"
+                    android:text="מס' מכרז"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     tools:textColor="#222b92" />
@@ -43,10 +45,11 @@
                 <TextView
                     android:layout_width="175dp"
                     android:layout_height="wrap_content"
-                    android:text="המסר"
+                    android:text="תוכן ההודעה"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    tools:textColor="#222b92"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_width="100dp"
@@ -54,7 +57,8 @@
                     android:text="תאריך"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    tools:textColor="#222b92"
+                    android:layout_gravity="center"/>
 
 
             </LinearLayout>
