--- a/app/src/main/res/layout/notificationitem.xml
+++ b/app/src/main/res/layout/notificationitem.xml
@@ -11,7 +11,17 @@
         android:id="@+id/username"
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:text="A"
+        android:text="DELTA"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        tools:textColor="#222b92" />
+
+    <TextView
+        android:id="@+id/tender_num"
+        android:layout_width="55dp"
+        android:layout_height="wrap_content"
+        android:text="182"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -21,7 +31,7 @@
         android:id="@+id/message"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:text="10"
+        android:text="לצערינו לא זכית במכרז תודה על הניסיון"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -29,9 +39,9 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="07/08/2018 20:00:01"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
