--- a/app/src/main/res/layout/fragment_list_tabs3.xml
+++ b/app/src/main/res/layout/fragment_list_tabs3.xml
@@ -22,8 +22,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:background="@drawable/round"
-                android:layout_marginBottom="5dp">
+                android:background="@drawable/misgert_ribua"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp">
 
 
                 <TextView
@@ -31,8 +32,9 @@
                     android:layout_height="wrap_content"
                     android:text="שם חברה"
                     android:textSize="16dp"
+                    android:layout_marginRight="3dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92"
+                    android:textColor="#000099"
                     />
                 <TextView
                     android:layout_width="55dp"
@@ -40,7 +42,7 @@
                     android:text="מס' מכרז"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92" />
+                    android:textColor="#000099" />
 
                 <TextView
                     android:layout_width="175dp"
@@ -48,7 +50,7 @@
                     android:text="תוכן ההודעה"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92"
+                    android:textColor="#000099"
                     android:layout_gravity="center"/>
 
                 <TextView
@@ -57,7 +59,7 @@
                     android:text="תאריך"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    tools:textColor="#222b92"
+                    android:textColor="#000099"
                     android:layout_gravity="center"/>
 
 
