--- a/app/src/main/res/layout/notificationitem.xml
+++ b/app/src/main/res/layout/notificationitem.xml
@@ -12,27 +12,28 @@
         android:layout_width="55dp"
         android:layout_height="wrap_content"
         android:text="DELTA"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#222b92"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        />
 
     <TextView
         android:id="@+id/tender_num"
         android:layout_width="55dp"
         android:layout_height="wrap_content"
         android:text="182"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#222b92"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        android:layout_marginRight="5dp"/>
+
 
     <TextView
         android:id="@+id/message"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:text="לצערינו לא זכית במכרז תודה על הניסיון"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#0000ff"
         android:textSize="15dp"
         android:textStyle="bold"
         tools:textColor="#222b92" />
@@ -42,10 +43,10 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="07/08/2018 20:00:01"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#222b92"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        />
 
 
 </LinearLayout>
