--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -22,7 +22,7 @@
             android:text="מס''ד"
             android:gravity="right"
             android:layout_gravity="center_vertical"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="#992600"
             android:textSize="15dp"
             android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
             android:text="פרוייקט"
             android:gravity="right"
             android:layout_gravity="center_vertical"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="#ff9900"
             android:textSize="15dp"
             android:textStyle="bold" />
 
@@ -55,7 +55,7 @@
             android:text="סטטוס"
             android:gravity="right"
             android:layout_gravity="center_vertical"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold" />
 
