--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content">
             <TextView
                 android:text="איש קשר : "
-                android:textStyle="bold"
                 android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -22,7 +23,8 @@
             <TextView
                 android:text="name"
                 android:id="@+id/name"
-                android:textStyle="bold"
+                android:textStyle="bold|italic"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,6 +35,7 @@
             <TextView
                 android:text="נייד : "
                 android:textStyle="bold"
+                android:textColor="#000000"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,7 +45,8 @@
             <TextView
                 android:text="phone"
                 android:id="@+id/phone"
-                android:textStyle="bold"
+                android:textStyle="bold|italic"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -69,6 +73,7 @@
             <TextView
                 android:text="אמייל : "
                 android:textStyle="bold"
+                android:textColor="#000000"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,7 +83,8 @@
             <TextView
                 android:text="email"
                 android:id="@+id/email"
-                android:textStyle="bold"
+                android:textStyle="bold|italic"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="15dp"
 
                 android:layout_width="wrap_content"
@@ -93,6 +99,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded2"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"/>
