--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -13,6 +13,7 @@
         <TextView
             android:text="איש קשר : "
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,7 +23,8 @@
         <TextView
             android:text="name"
             android:id="@+id/name"
-            android:textStyle="bold"
+            android:textStyle="bold|italic"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +35,7 @@
         <TextView
             android:text="נייד : "
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +45,8 @@
         <TextView
             android:text="phone"
             android:id="@+id/phone"
-            android:textStyle="bold"
+            android:textStyle="bold|italic"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,7 +73,7 @@
         <TextView
             android:text="אמייל : "
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -78,7 +82,8 @@
         <TextView
             android:text="bennjaminfj@gmail.com"
             android:id="@+id/email"
-            android:textStyle="bold"
+            android:textStyle="bold|italic"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
 
             android:layout_width="wrap_content"
@@ -94,6 +99,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded2"
             android:layout_alignParentLeft="true"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"/>
 
