--- a/app/src/main/res/layout/activity_my_tenders.xml
+++ b/app/src/main/res/layout/activity_my_tenders.xml
@@ -45,6 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="35dp"
+                android:textColor="@android:color/holo_blue_light"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="288dp"
                 />
@@ -106,7 +107,8 @@
             android:layout_marginTop="10dp"
             android:id="@+id/listTenders"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ExpandableListView>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="3dp"></ExpandableListView>
 
     </LinearLayout>
 
