--- a/app/src/main/res/layout/activity_win_tenders.xml
+++ b/app/src/main/res/layout/activity_win_tenders.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="35dp"
+                android:textColor="@android:color/holo_blue_light"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="288dp"
                 />
@@ -105,7 +106,8 @@
                 android:layout_marginTop="10dp"
                 android:id="@+id/listWin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></ExpandableListView>
+                android:layout_height="match_parent"
+                android:layout_marginBottom="3dp"></ExpandableListView>
 
         </LinearLayout>
 
