--- a/app/src/main/res/layout/fragment_private_tenders.xml
+++ b/app/src/main/res/layout/fragment_private_tenders.xml
@@ -248,7 +248,8 @@
             android:id="@+id/privateList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/cotertarot">
+            android:layout_below="@+id/cotertarot"
+            android:layout_marginBottom="3dp">
         </ExpandableListView>
 
     </RelativeLayout>
