--- a/app/src/main/res/layout/fragment_public_tenders.xml
+++ b/app/src/main/res/layout/fragment_public_tenders.xml
@@ -96,12 +96,13 @@
 
 
         <ListView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="3dp"
             android:layout_below="@+id/z"
             android:textDirection="rtl"
             android:id="@+id/publicList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="3dp"></ListView>
 
     </RelativeLayout>
 
