--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -19,7 +19,7 @@
             android:id="@+id/masad"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
-            android:text="מס''ד"
+            android:text="591"
             android:gravity="right"
             android:layout_gravity="center_vertical"
             android:textColor="#992600"
@@ -28,9 +28,9 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="85dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="חברה"
+            android:text="חברת חשמל"
             android:gravity="right"
             android:layout_gravity="center_vertical"
             android:textColor="@android:color/holo_blue_light"
@@ -39,25 +39,28 @@
 
         <TextView
             android:id="@+id/project"
-            android:layout_width="95dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="פרוייקט"
+            android:text="הקמת תחנת כח"
             android:gravity="right"
             android:layout_gravity="center_vertical"
             android:textColor="#ff9900"
             android:textSize="15dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="5dp"/>
 
         <TextView
             android:id="@+id/time"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="סטטוס"
+            android:text="עבר הזמן"
             android:gravity="right"
             android:layout_gravity="center_vertical"
             android:textColor="#000000"
             android:textSize="15dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="20dp"
+            />
 
     </LinearLayout>
 
