--- a/app/src/main/res/layout/dialog7.xml
+++ b/app/src/main/res/layout/dialog7.xml
@@ -2,43 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#3E80B4"
+    android:background="#e6eeff"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="15dp">
 
     <TextView
         android:id="@+id/txt_dia"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:text="שם המשתמש והסיסמא לא נמצאים במערכת."
-        android:textColor="@android:color/white"
+        android:text="שם המשתמש והסימסא אינם מתאימים זה לזה,בדוק את נכונות הפרטים ונסה להקליד שוב."
+        android:textColor="#ff0000"
         android:textSize="15dp"
         android:textStyle="bold" />
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="#3E80B4"
-        android:orientation="horizontal">
+
 
         <Button
             android:id="@+id/yes"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
-            android:background="@android:color/white"
+            android:background="#003399"
             android:clickable="true"
-            android:text="להרשמה"
-            android:textColor="#5DBCD2"
-            android:textStyle="bold" />
+            android:text="אישור"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"/>
 
 
-    </LinearLayout>
+
 
 </LinearLayout>
