--- a/app/src/main/res/layout/activity_win_tenders.xml
+++ b/app/src/main/res/layout/activity_win_tenders.xml
@@ -7,11 +7,18 @@
     android:id="@+id/drawer_layout"
     tools:context=".tenders.TyototActivity">
 
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textDirection="rtl">
+
+        <Button
+            android:id="@+id/gotostat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go Stats"/>
 
         <LinearLayout
             android:layout_width="match_parent"
