--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:paddingLeft="11dp"
+    android:paddingRight="11dp"
     tools:context=".StatisticActivity">
 
-    <TextView
-        android:id="@+id/win_sum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="here the sum :"
-        android:textSize="30dp"/>
-</LinearLayout>
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/static_bar"
+        android:layout_width="match_parent"
+        android:layout_height="400dp">
+    </com.github.mikephil.charting.charts.BarChart>
+
+
+
+</RelativeLayout>
