--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -1,21 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="11dp"
-    android:paddingRight="11dp"
-    tools:context=".StatisticActivity">
+    android:id="@+id/drawer_layout"
+    tools:context=".MainActivity"
+    android:textDirection="rtl">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/static_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp">
-    </com.github.mikephil.charting.charts.BarChart>
+        android:layout_height="match_parent"
+        android:background="#6affffff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                app:titleTextColor="@android:color/white"
+                android:minHeight="?attr/actionBarSize"
+                android:background="?attr/colorPrimary" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="11dp"
+            >
+
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/static_bar"
+                android:layout_width="match_parent"
+                android:layout_height="400dp">
+            </com.github.mikephil.charting.charts.BarChart>
+
+            <RelativeLayout
+                android:layout_marginTop="5dp"
+                android:id="@+id/send_t"
+                android:textDirection="rtl"
+                android:layout_below="@id/static_bar"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/s"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/tenderssended"
+                    android:src="@drawable/tenderssended"/>
+                <TextView
+                    android:id="@+id/tender_send"
+                    android:layout_centerVertical="true"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="50dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="סך הצעות שהוגשו"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/win_t"
+                android:textDirection="rtl"
+                android:layout_below="@id/send_t"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/w"
+                android:layout_alignParentRight="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/tenderswin"
+                android:src="@drawable/tenderswin"/>
+            <TextView
+                android:id="@+id/tender_win"
+                android:layout_centerVertical="true"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="סך הצעות שהוגשו"/>
+        </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/loss_t"
+                android:textDirection="rtl"
+                android:layout_below="@id/win_t"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/l"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/loss"
+                    android:src="@drawable/loss"/>
+                <TextView
+                    android:id="@+id/tender_loss"
+                    android:layout_centerVertical="true"
+                    android:textSize="14dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="50dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="סך הצעות שהוגשו"/>
+            </RelativeLayout>
 
 
 
-</RelativeLayout>
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_tenders"
+        app:menu="@menu/activity_tenders_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
