--- a/app/src/main/res/layout/activity_details_public.xml
+++ b/app/src/main/res/layout/activity_details_public.xml
@@ -250,7 +250,8 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:textColor="#000000"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15dp"
+                    android:text="5454"
                     />
 
             </LinearLayout>
@@ -279,7 +280,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginRight="15dp"/>
 
             </LinearLayout>
 
@@ -307,7 +308,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15dp"
                     />
 
             </LinearLayout>
@@ -337,7 +338,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15dp"
                     />
 
             </LinearLayout>
@@ -366,7 +367,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginRight="15dp"/>
 
             </LinearLayout>
 
@@ -394,7 +395,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginRight="15dp"/>
 
             </LinearLayout>
 
@@ -422,7 +423,7 @@
                     android:textColor="#000000"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginRight="15dp"/>
 
             </LinearLayout>
 
@@ -451,7 +452,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginRight="15dp"/>
 
             </LinearLayout>
 
@@ -479,7 +480,7 @@
                     android:textColor="#000000"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15dp"
                     />
 
             </LinearLayout>
